Created another step

--- a/.github/workflows/hello_world.yaml
+++ b/.github/workflows/hello_world.yaml
@@ -12,3 +12,6 @@ jobs:
         - id: s00
           # running some shell/bash command
           run: echo "current time in GitHub is $(date)"
+        
+        - id: s01
+          run: cat README.md
