--- a/.github/workflows/hello_world.yaml
+++ b/.github/workflows/hello_world.yaml
@@ -14,4 +14,4 @@ jobs:
           run: echo "current time in GitHub is $(date)"
         
         - id: s01
-          run: cat README.md
+          run: cat ./README.md
