--- a/.github/workflows/hello_world.yaml
+++ b/.github/workflows/hello_world.yaml
@@ -11,7 +11,10 @@ jobs:
         steps:
         - id: s00
           # running some shell/bash command
-          run: echo "current time in GitHub is $(date)"
+          # single (>) - delete and write, double (>>) - append and add to end of file
+
+          # create a value and pass to next step
+          run: echo "CURR_DATE $(date)" >> $GITHUB_OUPUT
         
         - id: s01
           run: ls -al
@@ -19,6 +22,7 @@ jobs:
         - id: s02
           uses: mscoutermarsh/cowsays-action@master
           with:
-            text: 'Moo Moo Moo'
+            # How to refer to prev steps: $ {{ steps. s01}}
+            text: 'Moo Moo Cow! ${{ steps.s00.outputs.CURR_DATE }}'
             color: 'green'
 
