Added title below

--- a/.github/workflows/build_and_release.yaml
+++ b/.github/workflows/build_and_release.yaml
@@ -20,7 +20,29 @@ jobs:
                 node-version: 24
         
           - id: s03
+            # Github actions by default does not link to the repo
             uses: actions/checkout@v5
 
           - run: echo "after " && ls -l
+
+          - id: s04
+            # Install angular cli
+            run: npm i -g @angular/cli && npm ci
+
+          - id: s05
+            # build the application
+            run: ng build
+
+          - id: s06
+            run: ls -l dist/countingbook/browser
+
+          - id: s07
+            uses: nwtgck/actions-netlify@v3.0
+            with:
+                publish-dir: dist/countingbook/browser
+                production-deploy: true
+            env:
+                NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
+                NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
+
 
